Improving .my-video css - optimized for mobile devices

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 
     .my-video {
         width: 130px;
+        max-height: 100px;
         position: absolute;
         left: 10px;
         bottom: 10px;
