--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+.user-id {
+    margin: 0 0 8px 0;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
 .video-container {
     width: 500px;
     height: 380px;
