--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11100,6 +11100,10 @@ a.text-dark:focus {
   }
 }
 
+.navbar-light .navbar-toggler {
+  outline: 0;
+}
+
 .user-id {
   margin: 0 0 8px 0;
   font-size: 1.5rem;
@@ -11108,9 +11112,9 @@ a.text-dark:focus {
 
 .video-container {
   width: 500px;
+  border-radius: 4px;
   height: 380px;
   margin: 15px auto;
-  border: 2px solid #645cff;
   position: relative;
   box-shadow: 1px 1px 11px #9e9e9e;
 }
@@ -11121,7 +11125,6 @@ a.text-dark:focus {
   position: absolute;
   left: 10px;
   bottom: 10px;
-  border: 6px solid #2196F3;
   border-radius: 6px;
   z-index: 2;
 }
