--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+.navbar-light {
+    .navbar-toggler {
+        outline: 0;
+    }
+}
+
 .user-id {
     margin: 0 0 8px 0;
     font-size: 1.5rem;
@@ -13,9 +19,9 @@
 
 .video-container {
     width: 500px;
+    border-radius: 4px;
     height: 380px;
     margin: 15px auto;
-    border: 2px solid #645cff;
     position: relative;
     box-shadow: 1px 1px 11px #9e9e9e;
 
@@ -25,7 +31,6 @@
         position: absolute;
         left: 10px;
         bottom: 10px;
-        border: 6px solid #2196F3;
         border-radius: 6px;
         z-index: 2;
     }
