Adding max-width: 130px to .my-video class

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11120,7 +11120,7 @@ a.text-dark:focus {
 }
 
 .video-container .my-video {
-  width: 130px;
+  max-width: 130px;
   max-height: 100px;
   position: absolute;
   left: 10px;
