--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,7 +26,7 @@
     box-shadow: 1px 1px 11px #9e9e9e;
 
     .my-video {
-        width: 130px;
+        max-width: 130px;
         max-height: 100px;
         position: absolute;
         left: 10px;
