--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11147,6 +11147,7 @@ a.text-dark:focus {
 .chat-box .buttons {
   display: -webkit-box;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
           justify-content: center;
 }
